--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -224,6 +224,8 @@ jobs:
           name: Run migrations
           command: |
             cd ~/project/backend
+            npm install
+            npm run build
             npm run migrations > output.txt
             cat output.txt
       - run:
