--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,8 +225,8 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run build
             npm audit fix
+            npm run build
             npm run migrations > output.txt
             cat output.txt
       - run:
@@ -283,17 +283,17 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
-#      - test-frontend:
-#          requires: [build-frontend]
-#      - test-backend:
-#          requires: [build-backend]
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
       - scan-backend:
           requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
       - deploy-infrastructure:
-#          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          requires: [scan-frontend, scan-backend]
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+#          requires: [scan-frontend, scan-backend]
           filters:
             branches:
               only: [main]
