--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
+            npm audit fix
             npm test
 
   test-backend:
@@ -92,6 +93,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
+            npm audit fix
             npm test
 
   scan-frontend:
