--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
-            npm audit fix
+            npm audit fix --force
             npm test
 
   test-backend:
@@ -93,7 +93,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm audit fix
+            npm audit fix --force
             npm test
 
   scan-frontend:
