--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
-            npm run lint
+            npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -61,7 +61,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run lint
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -107,7 +107,6 @@ jobs:
           name: Front-end scan
           command: |
             cd ~/project/frontend
-            npm audit fix --force
             npm audit --audit-level=critical
 
   scan-backend:
@@ -121,7 +120,6 @@ jobs:
           name: Backend-end scan
           command: |
             cd ~/project/backend
-            npm audit fix --force
             npm audit --audit-level=critical
 
   deploy-infrastructure:
