--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
-            npm run build
+            npm run lint
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -61,7 +61,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run build
+            npm run lint
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
