--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
-            npm test
+            npm run test
 
   test-backend:
     docker:
@@ -93,7 +93,7 @@ jobs:
             cd ~/project/backend
             npm install
             npm audit fix --force
-            npm test
+            npm run test
 
   scan-frontend:
     docker:
