--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
           name: Front-end test
           command: |
             cd ~/project/frontend
+            npm upgrade
             npm run test
             npm audit fix --force
 
