--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
+            npm audit fix
             npm run lint
       - save_cache:
           paths: [frontend/node_modules]
