--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
-            npm audit fix
-            npm run lint
+            npm run build
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
@@ -62,7 +61,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run lint
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -92,6 +91,7 @@ jobs:
           name: Back-end test
           command: |
             cd ~/project/backend
+            npm audit fix --force
             npm run test
 
   scan-frontend:
