--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run build
+            npm run lint
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
