Deploy front-end

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
           name: Front-end test
           command: |
             cd ~/project/frontend/
+            npm install --save-dev jest
             npm run test
 
   test-backend:
