--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
           command: |
             cd ~/project/frontend/
             npm install --save-dev jest
-            npm audit fix
+            npm audit fix --force
             npm run test
 
   test-backend:
