Deploy front-end

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
 
   build-backend:
     docker:
-      - image: cimg/node:16.8.0
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
@@ -68,7 +68,7 @@ jobs:
 
   test-frontend:
     docker:
-      - image: cimg/node:16.8.0
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - restore_cache:
