Deploy front-end

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,27 +1,79 @@
-- name: Install dependencies for PostgreSQL
+---
+- name: "update apt packages."
+  become: yes
+  apt:
+  update_cache: yes
+
+- name: "upgrade packages"
+  become: yes
+  apt:
+  upgrade: yes
+
+- name: "install dependencies."
+  become: yes
+  apt:
+  name: ["nodejs", "npm"]
+  state: latest
+  update_cache: yes
+
+- name: "install pm2"
   become: yes
   npm:
-    name: {{ item }} update_cache=true state=latest
-  with_items:
-    - bash
-    name={{ item }} update_cache=true state=latest
-    with_items:
-      - bash
-      - openssl
-      - libssl-dev
-      - libssl-doc
+  name: pm2
+  global: yes
+  production: yes
+  state: present
 
-- name: Install PostgreSQL
-  apt:
-    name: {{ item }} update_cache=true state=present
-  with_items:
-    - postgresql
-    - postgresql-contrib
-    - libpq-dev
-    - python3-psycopg2
+- name: "install typescript"
+  become: yes
+  npm:
+  name: typescript
+  global: yes
+  production: yes
+  state: present
 
-- name: Ensure the PostgreSQL service is running
-  service:
-    name: postgresql state=started enabled=yes
+- name: " update dependancies"
+  become: true
+  shell: |
+    curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+    apt-get install -y nodejs
+    npm install --save glob
 
+- name: "Copy backend build to server"
+  become: yes
+  unarchive:
+  src: ~/project/backend.tar.gz
+  dest: /home/ubuntu/
+  owner: ubuntu
+
+- name: "Copy package.json to server"
+  become: yes
+  copy:
+  src: ~/project/backend/package.json
+  dest: /home/ubuntu/
+  owner: ubuntu
+
+- name: Build
+  become: true
+  shell: |
+    cd /home/ubuntu/backend
+    npm install
+    npm fund
+    npm run build
+
+- name: "export .env"
+  become: yes
+  shell: |
+    export TYPEORM_HOST="{{ lookup('env', 'TYPEORM_HOST') }}"
+    export TYPEORM_ENTITIES="{{ lookup('env', 'TYPEORM_ENTITIES') }}"
+    export TYPEORM_USERNAME="{{ lookup('env', 'TYPEORM_USERNAME') }}"
+    export TYPEORM_PASSWORD="{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+    export TYPEORM_DATABASE="{{ lookup('env', 'TYPEORM_DATABASE') }}"
+- name: Executing node
+  become: true
+  shell: |
+    cd /home/ubuntu/backend
+    pm2 start --name backend npm -- start
+    npm run start:prod
+    pm2 ls
 
