--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
           name: Front-end test
           command: |
             cd ~/project/frontend/
-            jest --clearCache
+            npm install
             npm run test
 
   test-backend:
