--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,7 +105,7 @@ jobs:
           name: Front-end scan
           command: |
             cd ~/project/frontend
-            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical
 
   scan-backend:
     docker:
