--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,6 +118,7 @@ jobs:
           name: Backend-end scan
           command: |
             cd ~/project/backend
+            npm install
             npm audit --audit-level=critical
 
   deploy-infrastructure:
