copied package-lock.json from original project

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,8 +118,7 @@ jobs:
           name: Backend-end scan
           command: |
             cd ~/project/backend
-            npm install
-            npm audit --audit-level=critical
+            npm audit --audit-level=critical --force
 
   deploy-infrastructure:
     docker:
