--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,7 @@ jobs:
           name: Build front-end
           command: |
             cd ~/project/frontend
-            npm install oauth-sign@"0.9.0"
-            npm install
+            npm install all
             npm run build
       - save_cache:
           paths: [frontend/node_modules]
