--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -235,6 +235,8 @@ jobs:
       # attach workspace
       - attach_workspace:
           at: ~/project/.circleci/
+      - restore_cache:
+          key: [backend-build]
       - run:
           name: Run migrations
           command: |
