--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,11 +236,12 @@ jobs:
       - attach_workspace:
           at: ~/project/.circleci/
       - restore_cache:
-          key: [backend-build]
+          keys: [backend-build]
       - run:
           name: Run migrations
           command: |
             cd ~/project/backend
+            npm install
             npm run migrations > output.txt
             cat output.txt
       - run:
