--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,9 @@ jobs:
             cd ~/project/frontend/
             npm install
             npm run test
+      - save_cache:
+          paths: [frontend/node-modules]
+          key: frontend-build
 
   test-backend:
     docker:
@@ -86,13 +89,16 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [ backend-build ]
+          key: [ backend-build ]
       - run:
           name: Back-end test
           command: |
             cd ~/project/backend/
             npm audit fix --force
             npm run test
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build
 
   scan-frontend:
     docker:
@@ -242,6 +248,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
+            npm audit fix
             npm run migrations > output.txt
             cat output.txt
       - run:
