--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: [ backend-build ]
+          keys: [backend-build]
       - run:
           name: Back-end test
           command: |
