--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            npm run lint
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
@@ -248,9 +248,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install
-            echo "So weit komme ich"
-            npm audit fix --force
-            echo "Komme ich weiter"
+            npm run build
             npm run migrations > output.txt
             cat output.txt
       - run:
