--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,8 @@ jobs:
           name: Back-end build
           command: |
             cd ~/project/backend
-            npm install
+            npm install all
+            npm install typescript
             npm run build
       - save_cache:
           paths: [backend/node_modules]
