--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
           command: |
             cd ~/project/backend
             npm install all
-            npm install typescript
+            npm audit fix --force
             npm run build
       - save_cache:
           paths: [backend/node_modules]
