--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
           name: Back-end test
           command: |
             cd ~/project/backend/
-            npm audit fix --force
+            npm audit fix
             npm run test
       - save_cache:
           paths: [backend/node_modules]
@@ -112,7 +112,7 @@ jobs:
           command: |
             cd ~/project/frontend
             npm install
-            npm audit fix --audit-level=critical --force
+            npm audit fix --audit-level=critical
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-scan
@@ -128,7 +128,7 @@ jobs:
           name: Backend-end scan
           command: |
             cd ~/project/backend
-            npm audit --audit-level=critical --force
+            npm audit --audit-level=critical
 
   deploy-infrastructure:
     docker:
