--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,8 +94,7 @@ jobs:
           name: Back-end test
           command: |
             cd ~/project/backend/
-            npm install typescript
-            npm audit fix
+            npm install
             npm run test
       - save_cache:
           paths: [backend/node_modules]
