--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -319,7 +319,7 @@ jobs:
       - run:
           name: Deploy backend
           command: |
-            cd ~/project/.circleci/ansible/
+            cd ~/project/.circleci/ansible
             ansible-playbook -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure
       - revert-migrations
@@ -351,7 +351,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            FRONTEND_URL="http://udapeople-${CIRCLE_WORKFLOW_ID}.s3-website-us-east-1.amazonaws.com"
+            FRONTEND_URL="http://udapeople-mjvctz29a0smouk7o4i.s3-website-us-east-1.amazonaws.com"
             echo $FRONTEND_URL
             if curl -s ${FRONTEND_URL} | grep "Welcome"
             then
