--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -320,7 +320,7 @@ jobs:
           name: Deploy backend
           command: |
             cd ~/project/.circleci/ansible
-            tar -C ~/project/backend -czvf artifact.tar.gz .
+            tar -C backend -czvf artifact.tar.gz .
             ansible-playbook -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure
       - revert-migrations
