--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -321,8 +321,7 @@ jobs:
           command: |
             cd ~/project/.circleci/ansible
             tar -C ~/project/backend -czvf artifact.tar.gz .
-            pwd
-            ls -lisa
+            mv artifact.tar.gz ~/project/backend
             ansible-playbook -i inventory.txt deploy-backend.yml
       # Here's where you will add some code to rollback on failure
       - revert-migrations
