--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -340,16 +340,12 @@ jobs:
             apk add --update nodejs
             pip3 install awscli
       - run:
-          name: Get backend url
+          name: Get backend url and test it
           command: |
             BACKEND_URL=`curl -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" --request \
               GET https://api.memstash.io/values/backend-url`
-      - run:
-          name: Backend smoke test.
-          command: |
-            URL="${BACKEND_URL}:3030/api/status"
-            echo $URL
-            curl $URL
+            echo $BACKEND_URL
+            curl "${BACKEND_URL}:3030/api/status"
       - run:
           name: Frontend smoke test.
           command: |
