--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,6 +174,7 @@ jobs:
           command: |
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicDnsName' \
+              --filters "Name=tag-value,Values=Udacity-cdond-project-backend" \
               --output text >> PublicDnsName
       - save_cache:
           key: ec2Url
@@ -344,8 +345,7 @@ jobs:
           command: |
             BACKEND_URL=`curl -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" --request \
               GET https://api.memstash.io/values/backend-url`
-            echo $BACKEND_URL
-            curl "${BACKEND_URL}:3030/api/status"
+            curl ${BACKEND_URL}:3030/api/status
       - run:
           name: Frontend smoke test.
           command: |
