--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -185,10 +185,10 @@ jobs:
           restore_cache:
             key: ec2Url
           command: |
-            BACKEND_URL = `cat PublicDnsName`
-            echo ${BACKEND_URL}
+            BACKEND_URL=`cat PublicDnsName`
+            echo $BACKEND_URL
             curl -H "Content-Type: text/plain" -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" \
-              --request PUT --data ${BACKEND_URL} \
+              --request PUT --data $BACKEND_URL \
               https://api.memstash.io/values/backend-url
       - destroy-environment
 
