--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -361,8 +361,8 @@ jobs:
               return 0
             fi
       # Here's where you will add some code to rollback on failure
-#      - revert-migrations
-#      - destroy-environment
+      - revert-migrations
+      - destroy-environment
   cloudfront-update:
     docker:
       - image: amazon/aws-cli
