--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -72,6 +72,6 @@
   become: true
   shell: |
     cd /home/ubuntu/backend
-    pm2 start npm --name backend -- run start
+    pm2 start --name backend npm -- start
     npm run start
 
