--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,7 +299,7 @@ jobs:
             npm install webpack-dev-server -g
       - revert-migrations
       # Here's where you will add some code to rollback on failure
-      - destroy-environment
+#      - destroy-environment
 
   deploy-backend:
     docker:
