--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -348,7 +348,7 @@ jobs:
             BACKEND_URL=`curl -H "token: d36b76e8-a38c-4ded-887b-2a4d0c7cab38" --request \
               GET https://api.memstash.io/values/backend-url`
             echo $BACKEND_URL
-            curl https://$BACKEND_URL:3030/api/status
+            curl http://$BACKEND_URL:3030/api/status
       - run:
           name: Frontend smoke test.
           command: |
@@ -361,8 +361,8 @@ jobs:
               return 0
             fi
       # Here's where you will add some code to rollback on failure
-      - revert-migrations
-      - destroy-environment
+#      - revert-migrations
+#      - destroy-environment
 
   cloudfront-update:
     docker:
