--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -295,7 +295,7 @@ jobs:
             cd ~/project/frontend
             npm install
             npm run build
-            aws s3 cp ./dist s3://udapeople-ymjvctz29a0smouk7o4i --recursive
+            aws s3 cp ./dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
             npm install webpack-dev-server -g
       - revert-migrations
       # Here's where you will add some code to rollback on failure
@@ -352,7 +352,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            FRONTEND_URL="http://udapeople-mjvctz29a0smouk7o4i.s3-website-us-east-1.amazonaws.com"
+            FRONTEND_URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
             echo $FRONTEND_URL
             if curl -s ${FRONTEND_URL} | grep "Welcome"
             then
@@ -361,8 +361,8 @@ jobs:
               return 0
             fi
       # Here's where you will add some code to rollback on failure
-#      - revert-migrations
-#      - destroy-environment
+      - revert-migrations
+      - destroy-environment
 
   cloudfront-update:
     docker:
@@ -382,10 +382,36 @@ jobs:
               --output text`
             aws cloudformatin deploy \
             -- template-file cloudfront.yml \
-            -- stack-name \
+            -- stack-name cf-udacity-cloudfront-stack\
             -- parameter-overrides WorkflowID="${CF_STACK_ID}" \
             -- tags project=udapeople
       # Here's where you will add some code to rollback on failure
+      - revert-migrations
+      - destroy-environment
+
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      # Checkout code from git
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum install tar gzip
+      - run:
+          name: Get old stack workflow id
+          command: |
+            # your code here
+            export OldWorkflowID="the id here"
+            export STACKS=[] #put the list of stacks here
+      - run:
+          name: Remove old stacks and files
+          command: |
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              # your code here
+            fi
 
 workflows:
   default:
@@ -415,3 +441,7 @@ workflows:
           requires: [ run-migrations ]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+          requires: [smoke-test]
+#      - cleanup:
+#          requires: [cloudfront-update]
