--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -375,16 +375,23 @@ jobs:
           command: |
             yum -y install curl tar gzip
       - run:
+          name: Store old WorkflowID in memstash for cleanup phase
+          working_directory: ./.circleci/files
+          command: |
+            OldWorkflowID=$(aws cloudformation \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            curl -H "Content-Type: text/plain" -H "token: 930727e1-9c54-4501-a973-923d8093d161" \
+              --request PUT --data "$OldWorkflowID" https://api.memstash.io/values/WorkflowID
+      - run:
           name: Update cloudfront distribution
           command: |
-            cd ~/project/.circleci/files
-            CF_STACK_ID=`aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate \
-              --output text`
-            aws cloudformatin deploy \
-            -- template-file cloudfront.yml \
-            -- stack-name cf-udacity-cloudfront-stack\
-            -- parameter-overrides WorkflowID="${CF_STACK_ID}" \
-            -- tags project=udapeople
+            aws cloudformation deploy \
+              --template-file .circleci/files/cloudfront.yml \
+              --stack-name cf-udacity-cloudfront-stack \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+              --tags project=udapeople
+
       # Here's where you will add some code to rollback on failure
       - revert-migrations
       - destroy-environment
