--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -405,7 +405,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum install tar gzip
+            yum -y install tar gzip
       - run:
           name: Get old stack workflow id
           command: |
