--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -411,7 +411,7 @@ jobs:
           command: |
             OLDWORKFLOWID=`curl -H "token: 930727e1-9c54-4501-a973-923d8093d161" \
               --request GET https://api.memstash.io/values/WorkflowID`
-            STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
             CURRENTWORKFLOWID=${CIRCLE_WORKFLOW_ID}
             echo "old = $OLDWORKFLOWID"
@@ -419,12 +419,12 @@ jobs:
             echo $STACKS
             export OLDWORKFLOWID=$OLDWORKFLOWID
             export STACKS=[`echo $STACKS`] #put the list of stacks here
-            if [[ "${STACKS[@]}" =~ "${OLDWORKFLOWID}" ]]
+            if [[ "${CURRENTWORKFLOWID}" =~ "${OLDWORKFLOWID}" ]]
             then
               echo "OLDWORKFLOWID != $CURRENTWORKFLOWID => will delete old version"
               aws s3 rm s3://udapeople-$OldWorkflowID --recursive
-              aws cloudformation delete-stack --stack-name udapeople-backend-$OLDWORKFLOWID
-              aws cloudformation delete-stack --stack-name udapeople-frontend-$OLDWORKFLOWID
+              aws cloudformation delete-stack --stack-name udacity-backend-$OLDWORKFLOWID
+              aws cloudformation delete-stack --stack-name udacity-frontend-$OLDWORKFLOWID
             fi
 
 workflows:
