--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -410,15 +410,17 @@ jobs:
           name: Get old stack workflow id and remove it
           command: |
             export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --filters "Name=tag-value,Values=udacity" \
               --no-paginate --output text)
             echo "${OldWorkflowID}"
             export STACKS=$(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+              --filters "Name=tag-value,Values=udacity" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
             echo "${STACKS}"
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]; then
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udacity-backend-${OldWorkflowID}"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udacity-frontend-${OldWorkflowID}"
             fi
 
 workflows:
