--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -87,6 +87,7 @@
     dest: /tmp
 
 - name: move node exporter to /usr/local/bin
+  become: true
   copy:
     src: /tmp/node_exporter-1.0.1.linux-amd64/node_exporter
     dest: /usr/local/bin/node_exporter
@@ -96,6 +97,7 @@
     mode: 0755
 
 - name: install unit file to systemd
+  become: true
   template:
     src: templates/node_exporter.service.j2
     dest: /etc/systemd/system/node_exporter.service
@@ -104,6 +106,7 @@
     mode: 0600
 
 - name: configure systemd to use service
+  become: true
   systemd:
     daemon_reload: yes
     enabled: yes
