--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -99,7 +99,7 @@
 - name: install unit file to systemd
   become: true
   template:
-    src: templates/node_exporter.service.j2
+    src: tmp/node_exporter.service.j2
     dest: /etc/systemd/system/node_exporter.service
     owner: root
     group: root
