--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -326,6 +326,11 @@ jobs:
             tar -C ~/project/backend -czvf artifact.tar.gz .
             mv artifact.tar.gz ~/project/backend
             ansible-playbook -i inventory.txt deploy-backend.yml
+      - run:
+          name: Configure prometheus
+          command: |
+            cd ~/project/.circleci/ansible
+            ansible-playbook -i inventory.txt configure-prometheus.yml
       # Here's where you will add some code to rollback on failure
       - revert-migrations
       - destroy-environment
