--- a/.circleci/ansible/roles/configure-node-exporter/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-node-exporter/tasks/main.yml
@@ -19,11 +19,11 @@
     group: root
     mode: 0755
 
-- name: "add node exporter configuration."
+- name: add node exporter configuration
   become: true
   copy:
     src: node_exporter.service
-    dest: /etc/systemd/system/
+    dest: /etc/systemd/system/node_exporter.service
 
 - name: configure systemd to use service
   become: true
