--- a/.circleci/ansible/roles/configure-node-exporter/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-node-exporter/tasks/main.yml
@@ -22,7 +22,7 @@
 - name: add node exporter configuration
   become: true
   copy:
-    src: node_exporter.service
+    src: ./node_exporter.service
     dest: /etc/systemd/system/node_exporter.service
 
 - name: configure systemd to use service
