--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ jobs:
             cd ~/project/backend
             npm install all
             npm run build
+            npm audit fix
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
