--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,19 @@ jobs:
           name: Back-end build
           command: |
             cd ~/project/backend
+            npm install @nestjs/common@8.0.6
+            npm install @nestjs/core@8.0.6
+            npm install @nestjs/cqrs@8.0.0
+            npm install @nestjs/jwt@8.0.0
+            npm install @nestjs/passport@8.0.1
+            npm install @nestjs/platform-express@8.0.6
+            npm install @nestjs/swagger@5.0.9
+            npm install @nestjs/typeorm@8.0.2
+            npm install @nestjs/testing@8.0.6
+            npm install nodemon@2.0.12
+            npm install standard-version@9.3.1
+            npm install ts-jest@27.0.4
             npm install all
-            npm audit fix --force
             npm run build
       - save_cache:
           paths: [backend/node_modules]
