--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,7 @@ jobs:
           name: Back-end build
           command: |
             cd ~/project/backend
-            npm install all
-            npm audit fix --audit-level=critical --force
+            npm install
             npm run build
       - save_cache:
           paths: [backend/node_modules]
