--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,8 @@ jobs:
           name: Back-end build
           command: |
             cd ~/project/backend
-            npm cache clean --force
             npm install
+            npm audit fix
             npm run build
       - save_cache:
           paths: [backend/node_modules]
