--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,9 +60,8 @@ jobs:
           name: Back-end build
           command: |
             cd ~/project/backend
-            npm install
-            npm audit fix
-            npm run build
+            sudo npm install
+            sudo npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
