--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,14 +54,14 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [backend-build]
+#      - restore_cache:
+#          keys: [backend-build]
       - run:
           name: Back-end build
           command: |
             cd ~/project/backend
-            sudo npm install
-            sudo npm run build
+            npm install
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
