--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,6 +324,7 @@ jobs:
           name: Create .env file and deploy backend
           command: |
             cd ~/project/.circleci/ansible
+            mkdir ~/project/backend/.env
             echo NODE_ENV=production > "backend/.env"
             echo VERSION=1 >> "backend/.env"
             echo ENVIROMENT=development >> "backend/.env"
